# eeg-neurable-steamdeck

./: ADAPTER.md  BUILD.md  Cargo.toml  KEEPALIVE.md  PEER_SYNC.md  PROTOCOL.md  README.md  TROUBLESHOOTING.md
config/: default.toml  jetson-orin.toml  jetson_orin.toml  steam-deck.toml  steamdeck.toml
examples/: basic_stream.rs  csv_output.rs
scripts/: cross-build.sh  detect-adapter.sh  pair-mw75.sh  setup-bluez.sh
src/: adapter.rs  config.rs  keepalive.rs  lib.rs  logging.rs  main.rs  mw75_client.rs  output.rs  parse.rs  protocol.rs  rfcomm.rs  simulate.rs  sync_peer.rs  types.rs
