[package]
name = "eeg-neurable-steamdeck"
version = "0.1.0"
edition = "2021"
description = "Raw EEG acquisition system for Neurable MW75 on Steam Deck and Jetson Orin"
authors = ["ArcMike0430"]
license = "MIT"
repository = "https://github.com/ArcMike0430/eeg-neurable-steamdeck"
keywords = ["eeg", "neurable", "bluetooth", "steamdeck", "bci"]
categories = ["science", "hardware-support", "asynchronous"]
readme = "README.md"
default-run = "eeg-neurable"

[[bin]]
name = "eeg-neurable"
path = "src/main.rs"

[[bin]]
name = "eeg-stream"
path = "src/bin/eeg_stream.rs"

[[bin]]
name = "eeg-tui"
path = "src/bin/eeg_tui.rs"
required-features = ["tui"]

[[bin]]
name = "ble-probe"
path = "src/bin/ble_probe.rs"

[[bin]]
name = "rfcomm-debug"
path = "src/bin/rfcomm_debug.rs"
required-features = ["rfcomm"]

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
rfcomm = ["dep:bluer"]
websocket = ["dep:tokio-tungstenite", "dep:tungstenite"]
lsl = ["dep:lsl"]
simulation = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# BLE (cross-platform)
btleplug = "0.11"
uuid = { version = "1", features = ["v4"] }

# RFCOMM on Linux via BlueZ (optional)
bluer = { version = "0.17", features = ["rfcomm"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV output
csv = "1"

# WebSocket output (optional)
tokio-tungstenite = { version = "0.29", optional = true }
tungstenite = { version = "0.29", optional = true }

# LSL (Lab Streaming Layer) output (optional)
lsl = { version = "0.1", optional = true }

# TUI (optional)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Time / timestamps
chrono = { version = "0.4", features = ["serde"] }

# Circular buffer
ringbuf = "0.5"

# Byte order / parsing
byteorder = "1"

# Hex formatting for debug
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
